--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "trabalho-web",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +18,8 @@
     "url": "https://github.com/Theusd7/trabalho-web/issues"
   },
   "homepage": "https://github.com/Theusd7/trabalho-web#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
